<resources>
    <string name="app_name">ShoppingListApp</string>

    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="sortByName">Sort by name</string>
    <string name="sortByQuantity">Sort by quantity</string>
    <string name="share">Share</string>

    <string name="confirmation">Confirmation</string>
    <string name="areYouSure">Are you sure to delete all products from the list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_settings">Settings</string>
    <string name="enterName"> Enter name</string>

    <string name="cancle">Cancle</string>
    <string name="update">Update</string>
    <string name="start_nr">Start no.:</string>
    <string name="slut_nr">End no.:</string>
    <string name="titleOfDilog">Update product</string>
</resources>