<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.pondar.actionbardemokotlin.MainActivity">

    <item
        android:id="@+id/item_action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:title="@string/share"/>
    <item
        android:id="@+id/item_action_settings"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/item_deleteAllItems"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/about"/>

    <item
        android:id="@+id/item_sortByName"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/sortByName"/>
    <item
        android:id="@+id/item_sortByQunatity"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/sortByQuantity"/>

</menu>